Fix groups spacings

--- a/packages/scss/src/components/listboxOption/mods.scss
+++ b/packages/scss/src/components/listboxOption/mods.scss
@@ -21,16 +21,15 @@
 		--components-listboxOption-content-font: var(--pr-t-font-body-S);
 		--components-listboxOption-content-color: var(--pr-t-color-text-subtle);
 		--components-listboxOption-content-position: sticky;
-		--components-listboxOption-content-marginBlockStart: var(--pr-t-spacings-50);
 		--components-listboxOption-content-checkboxField-display: none;
 		--components-listboxOption-content-flexWrap: wrap;
 		--components-listboxOption-content-justifyContent: space-between;
-		--components-listboxOption-content-insetBlockStart: var(--pr-t-spacings-50);
+		--components-listboxOption-content-insetBlockStart: 0;
 		--components-listboxOption-content-boxShadow:
 			calc(var(--pr-t-spacings-100) * -1) 0 0 0 var(--pr-t-elevation-surface-raised),
-			calc(var(--pr-t-spacings-100) * 1) 0 0 0 var(--pr-t-elevation-surface-raised),
-			calc(var(--pr-t-spacings-100) * -1) calc(var(--pr-t-spacings-100) * -1) 0 0 var(--pr-t-elevation-surface-raised),
-			calc(var(--pr-t-spacings-100) * 1) calc(var(--pr-t-spacings-100) * -1) 0 0 var(--pr-t-elevation-surface-raised);
+			var(--pr-t-spacings-100) 0 0 0 var(--pr-t-elevation-surface-raised),
+			calc(var(--pr-t-spacings-100) * -1) calc(var(--pr-t-spacings-50) * -1) 0 0 var(--pr-t-elevation-surface-raised),
+			var(--pr-t-spacings-100) calc(var(--pr-t-spacings-50) * -1) 0 0 var(--pr-t-elevation-surface-raised);
 	}
 
 	.listboxOptionWrapper {
